--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ RUN \
 
 RUN python3 -m pip install -U pip setuptools wheel
 
-RUN python3 -m pip install -v git+https://github.com/wkentaro/labelme.git
+RUN python3 -m pip install -v git+https://github.com/codebaragi23/labelme.git
 
 RUN mkdir /root/workdir
 
