--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -14,12 +14,12 @@ file_search: null
 sort_labels: true
 validate_label: null
 
-default_shape_color: [0, 255, 0]
-shape_color: auto  # null, 'auto', 'manual'
-shift_auto_shape_color: 0
+default_annotation_color: [0, 255, 0]
+annotation_color: auto  # null, 'auto', 'manual'
+shift_auto_annotation_color: 0
 label_colors: null
 
-shape:
+annotation:
   # drawing
   line_color: [0, 255, 0, 128]
   fill_color: [0, 255, 0, 0]  # transparent
@@ -30,6 +30,11 @@ shape:
   hvertex_fill_color: [255, 255, 255, 255]
 
 # main
+file_dock:
+  show: true
+  closable: true
+  movable: true
+  floatable: true
 flag_dock:
   show: true
   closable: true
@@ -40,12 +45,7 @@ label_dock:
   closable: true
   movable: true
   floatable: true
-shape_dock:
-  show: true
-  closable: true
-  movable: true
-  floatable: true
-file_dock:
+annot_dock:
   show: true
   closable: true
   movable: true
@@ -90,11 +90,11 @@ shortcuts:
   create_line: null
   create_point: null
   create_linestrip: null
-  edit_polygon: Ctrl+J
-  delete_polygon: Delete
-  duplicate_polygon: Ctrl+D
+  edit_annotation: Ctrl+A
+  delete_annotation: Delete
+  duplicate_annotation: Ctrl+D
   undo: Ctrl+Z
   undo_last_point: [Ctrl+Z, Backspace]
   add_point_to_edge: Ctrl+Shift+P
   edit_label: Ctrl+E
-  toggle_keep_prev_mode: Ctrl+P
+  toggle_keep_prev_mode: Ctrl+K
