--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -14,6 +14,7 @@ file_search: null
 sort_labels: true
 validate_label: null
 
+label_format: 'GeoJSON' # 'simple', 'GeoJSON'
 default_annotation_color: [0, 255, 0]
 annotation_color: auto  # null, 'auto', 'manual'
 shift_auto_annotation_color: 0
