--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -1,4 +1,5 @@
 auto_save: false
+auto_open_next_eval: true
 display_label_popup: true
 store_data: true
 keep_prev: false
@@ -46,7 +47,7 @@ label_dock:
   movable: true
   floatable: true
 annotator_dock:
-  show: false
+  show: true
   closable: true
   movable: true
   floatable: true
