--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # pip install -r requirements.txt
 
 # base ----------------------------------------
+setuptools
+wheel
 imgviz>=0.11.0
 matplotlib
 numpy
@@ -9,7 +11,6 @@ PyYAML
 qtpy
 termcolor
 tifffile
-imagecodecs
 lxml
 colordict
 
