[U]메뉴 수정, annot편집모드에서 이동모드 별도로

--- a/mindAT/config/default_config.yaml
+++ b/mindAT/config/default_config.yaml
@@ -20,7 +20,7 @@ annotation_color: auto  # null, 'auto', 'manual'
 shift_auto_annotation_color: 0
 label_colors: null
 
-tiff_real_bitdepth: 12
+tiff_real_bitdepth: 8
 
 # geo-json configuration
 geo:
@@ -99,7 +99,7 @@ shortcuts:
   create_line: null
   create_point: null
   create_linestrip: null
-  edit_annotation: Ctrl+A
+  move_annotation: Ctrl+M
   delete_annotation: Delete
   duplicate_annotation: Ctrl+D
   undo: Ctrl+Z
