--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# pip install -r requirements.txt
+# pip3 install -r requirements.txt
 
 # base ----------------------------------------
 setuptools
@@ -28,9 +28,14 @@ pycocotools>=2.0
 # pip install pipwin
 pandas
 shapely
+
+# need to next command
+# apt install libgdal-dev
+# export CPLUS_INCLUDE_PATH=/usr/include/gdal
+# export C_INCLUDE_PATH=/usr/include/gdal
+
 gdal
 fiona
 pyproj
 six
-rtree
 geopandas
