[Initial] 브랜치 생성

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,41 @@
-# pip install -r requirements.txt
+# pip3 install -r requirements.txt
 
 # base ----------------------------------------
 setuptools
 wheel
 imgviz>=0.11.0
+opencv-python
 matplotlib
 numpy
 Pillow>=2.8.0
+affine
 PyQt5
 qtpy
-PyYAML
+pyside2
+pyyaml
 termcolor
 tifffile
 lxml
 imagecodecs
 colordict
+colorama
 
-# # Geo ----------------------------------------
-geopandas
-pygeos
-
-# # coco ----------------------------------------
+# coco ----------------------------------------
 pycocotools>=2.0
 
-# export --------------------------------------
-# coremltools==4.0b2
-# onnx>=1.7.0
+# Geo ----------------------------------------
+# if windows then using pipwin install
+# pip install pipwin
+pandas
+shapely
 
-# extras --------------------------------------
-# thop
+# need to next command
+# apt install libgdal-dev
+# export CPLUS_INCLUDE_PATH=/usr/include/gdal
+# export C_INCLUDE_PATH=/usr/include/gdal
+
+gdal
+fiona
+pyproj
+six
+geopandas
